Index wird erfolgreich abgespeichert Die Searchtable wird nicht richtig geladen, Filter werden nicht verwendet